--- a/version_1/app/templates/test/test.html
+++ b/version_1/app/templates/test/test.html
@@ -17,18 +17,17 @@
 
 
         <div class=" text-center">
-            <p id="question" class=" text-primary h3"></p>
+            <h3 id="question" class=" text-primary h3"></h3>
         </div>
 
-
-        <div class="button text-center">
+        <div class="button text-center col-md-10 btn-group-justified">
             <button class=" btn-primary btn-lg" id="option_0"></button>
             <button class=" btn-primary btn-lg" id="option_1"></button>
             <button class=" btn-primary btn-lg" id="option_2"></button>
             <button class=" btn-primary btn-lg" id="option_3"></button>
         </div>
 
-        <div class="text-center">
+        <div class="text-center col-md-10">
             <p id="progress" class=" text-info">Qustion x of y</p>
         </div>
     </div>
